[gd_scene load_steps=10 format=2]

[ext_resource path="res://components/dashboard/dashboard_manager.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/icon_128_drop_zone.svg" type="Texture" id=2]
[ext_resource path="res://assets/theme/Barlow-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/icons/icon_128_delete_trashcan.svg" type="Texture" id=4]
[ext_resource path="res://assets/icons/icon_128_duplicate.svg" type="Texture" id=5]
[ext_resource path="res://components/elements/styled/icon_button.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=22]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="StyleBoxEmpty" id=28]

[node name="DashBoardManager" type="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
drag_to_rearrange_enabled = true
script = ExtResource( 1 )

[node name="ManageDashboards" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 38.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ManageDashboards"]
margin_left = 640.0
margin_top = 236.0
margin_right = 1280.0
margin_bottom = 805.0
rect_min_size = Vector2( 640, 400 )
size_flags_horizontal = 4
size_flags_vertical = 6
custom_constants/separation = 20

[node name="Label" type="Label" parent="ManageDashboards/VBoxContainer"]
margin_right = 640.0
margin_bottom = 39.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 22 )
text = "Manage Dashboards"
align = 1

[node name="DropZone" type="TextureRect" parent="ManageDashboards/VBoxContainer"]
modulate = Color( 0.537255, 0.819608, 0.945098, 1 )
margin_top = 59.0
margin_right = 640.0
margin_bottom = 159.0
rect_min_size = Vector2( 0, 100 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="DropZoneLabel" type="Label" parent="ManageDashboards/VBoxContainer"]
margin_top = 179.0
margin_right = 640.0
margin_bottom = 199.0
text = "Drag and Drop an exported Resoto dashboard here to import them."
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ManageDashboards/VBoxContainer"]
margin_top = 219.0
margin_right = 640.0
margin_bottom = 569.0
rect_min_size = Vector2( 0, 350 )
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="ManageDashboards/VBoxContainer/HBoxContainer"]
margin_right = 640.0
margin_bottom = 350.0
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="ManageDashboards/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 640.0
margin_bottom = 314.0
size_flags_vertical = 3
custom_styles/bg = SubResource( 23 )

[node name="DashboardItemList" type="ItemList" parent="ManageDashboards/VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer"]
margin_right = 640.0
margin_bottom = 314.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/cursor_unfocused = SubResource( 28 )
same_column_width = true

[node name="HBoxContainer" type="HBoxContainer" parent="ManageDashboards/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 318.0
margin_right = 640.0
margin_bottom = 350.0
custom_constants/separation = 20

[node name="AddDashboard" type="Button" parent="ManageDashboards/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 640.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Create new dashboard"

[node name="OpenDashboard" type="Button" parent="ManageDashboards/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
visible = false
margin_left = 330.0
margin_right = 640.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "Open"

[node name="DuplicateDashboard" parent="ManageDashboards/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer" instance=ExtResource( 6 )]
unique_name_in_owner = true
visible = false
margin_left = 554.0
margin_right = 587.0
hint_tooltip = "Duplicate dashboard"
icon_tex = ExtResource( 5 )

[node name="DeleteDashboard" parent="ManageDashboards/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer" instance=ExtResource( 6 )]
unique_name_in_owner = true
visible = false
margin_left = 607.0
margin_right = 640.0
hint_tooltip = "Delete dashboard"
icon_tex = ExtResource( 4 )

[connection signal="tab_changed" from="." to="." method="_on_DashBoardManager_tab_changed"]
[connection signal="tab_selected" from="." to="." method="_on_DashBoardManager_tab_selected"]
[connection signal="visibility_changed" from="." to="." method="_on_DashBoardManager_visibility_changed"]
[connection signal="item_activated" from="ManageDashboards/VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/DashboardItemList" to="." method="_on_DashboardItemList_item_activated"]
[connection signal="item_selected" from="ManageDashboards/VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/DashboardItemList" to="." method="_on_DashboardItemList_item_selected"]
[connection signal="nothing_selected" from="ManageDashboards/VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer/DashboardItemList" to="." method="_on_DashboardItemList_nothing_selected"]
[connection signal="pressed" from="ManageDashboards/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/AddDashboard" to="." method="_on_AddDashboard_pressed"]
[connection signal="pressed" from="ManageDashboards/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/OpenDashboard" to="." method="_on_OpenDashboard_pressed"]
[connection signal="pressed" from="ManageDashboards/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/DuplicateDashboard" to="." method="_on_DuplicateDashboard_pressed"]
[connection signal="pressed" from="ManageDashboards/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/DeleteDashboard" to="." method="_on_DeleteDashboard_pressed"]
